Create UI for calc

--- a/index.html
+++ b/index.html
@@ -7,38 +7,34 @@
     <script src="script.js" defer></script> 
 </head>
 <body>
+<header>My calculator</header>
 
 <div class="calculatorFrame">
     <div class="displayScreen"></div>
-
     <div class="inputArea">
-        <div class="misc">
-            <div class="delete">C</div>
-            <div class="toggle">±</div>
-            <div class="percentage">%</div>
-        </div>
-        <div class="input">
-            <div class="seven">7</div>
-            <div class="eight">8</div>
-            <div class="nine">9</div>
-            <div class="four">4</div>
-            <div class="five">5</div>
-            <div class="six">6</div>
-            <div class="one">1</div>
-            <div class="two">2</div>
-            <div class="three">3</div>
-            <div class="zero">0</div>
-            <div class="coma">.</div>
-        </div>
-        <div class="operators">
-            <div class="divide">÷</div>
-            <div class="multiply">*</div>
-            <div class="substract">-</div>
-            <div class="add">+</div>
-            <div class="equals">=</div>
-        </div>
-    </div>
+        <button class="delete misc">C</button>
+        <button class="toggle misc">±</button>
+        <button class="percentage misc">%</button>
+        <button class="divide operators">÷</button>
+        <button class="seven number">7</button>
+        <button class="eight number">8</button>
+        <button class="nine number">9</button>
+        <button class="multiply operators">*</button>
+        <button class="four number">4</button>
+        <button class="five number">5</button>
+        <button class="six number">6</button>
+        <button class="substract operators">-</button>
+        <button class="one number">1</button>
+        <button class="two number">2</button>
+        <button class="three number">3</button>
+        <button class="add operators">+</button>
+        <button class="zero number">0</button>
+        <button class="coma number">.</button>
+        <button class="equals ">=</button>
+    </div> 
 </div>
 
+
+<footer>Created by Ayman</footer>
 </body>
 </html>
