Simplify structure and classes

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <div class="calculatorFrame">
     <div class="displayScreen"></div>
     <div class="inputArea">
-        <button class="delete misc">C</button>
+        <button class="clear misc">C</button>
         <button class="toggle misc">±</button>
         <button class="percentage misc">%</button>
         <button class="divide operators">÷</button>
-        <button class="seven number">7</button>
-        <button class="eight number">8</button>
-        <button class="nine number">9</button>
+        <button class="seven numbers">7</button>
+        <button class="eight numbers">8</button>
+        <button class="nine numbers">9</button>
         <button class="multiply operators">*</button>
-        <button class="four number">4</button>
-        <button class="five number">5</button>
-        <button class="six number">6</button>
+        <button class="four numbers">4</button>
+        <button class="five numbers">5</button>
+        <button class="six numbers">6</button>
         <button class="substract operators">-</button>
-        <button class="one number">1</button>
-        <button class="two number">2</button>
-        <button class="three number">3</button>
+        <button class="one numbers">1</button>
+        <button class="two numbers">2</button>
+        <button class="three numbers">3</button>
         <button class="add operators">+</button>
-        <button class="zero number">0</button>
-        <button class="coma number">.</button>
-        <button class="equals ">=</button>
+        <button class="zero numbers">0</button>
+        <button class="coma numbers">.</button>
+        <button class="equals operators">=</button>
     </div> 
 </div>
 
