--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="three numbers">3</button>
         <button class="add operators">+</button>
         <button class="zero numbers">0</button>
-        <button class="coma">.</button>
+        <button class="comma">.</button>
         <button class="equals operators">=</button>
     </div> 
 </div>
