--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
 </head>
 <body>
 <header>My calculator</header>
-
+<p class="alertMsg"></p>
 <div class="calculatorFrame">
-    <div class="displayScreen"></div>
+    <div class="displayScreen"><div class="displayInput"></div></div>
     <div class="inputArea">
         <button class="clear misc">C</button>
+        <button class="clearLast misc">CE</button>
         <button class="toggle misc">±</button>
         <button class="percentage misc">%</button>
-        <button class="divide operators">÷</button>
         <button class="seven numbers">7</button>
         <button class="eight numbers">8</button>
         <button class="nine numbers">9</button>
-        <button class="multiply operators">*</button>
+        <button class="divide operators">÷</button>
         <button class="four numbers">4</button>
         <button class="five numbers">5</button>
         <button class="six numbers">6</button>
-        <button class="substract operators">-</button>
+        <button class="multiply operators">*</button>
         <button class="one numbers">1</button>
         <button class="two numbers">2</button>
         <button class="three numbers">3</button>
-        <button class="add operators">+</button>
+        <button class="substract operators">-</button>
         <button class="zero numbers">0</button>
         <button class="comma">.</button>
         <button class="equals operators">=</button>
+        <button class="add operators">+</button>
     </div> 
 </div>
 
