--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <p class="alertMsg"></p>
 <div class="calculatorFrame">
     <div class="displayScreen"><div class="displayInput"></div></div>
-    <div class="inputArea">
-        <button class="clear misc">C</button>
-        <button class="clearLast misc">CE</button>
-        <button class="toggle misc">±</button>
-        <button class="percentage misc">%</button>
-        <button class="seven numbers">7</button>
-        <button class="eight numbers">8</button>
-        <button class="nine numbers">9</button>
-        <button class="divide operators">÷</button>
-        <button class="four numbers">4</button>
-        <button class="five numbers">5</button>
-        <button class="six numbers">6</button>
-        <button class="multiply operators">*</button>
-        <button class="one numbers">1</button>
-        <button class="two numbers">2</button>
-        <button class="three numbers">3</button>
-        <button class="substract operators">-</button>
-        <button class="zero numbers">0</button>
-        <button class="comma">.</button>
-        <button class="equals operators">=</button>
-        <button class="add operators">+</button>
+    <div class="inputArea" id="input">
+        <button class="clear misc" id="Escape">C</button>
+        <button class="clearLast misc" id="Backspace">CE</button>
+        <button class="toggle misc" id="±">±</button>
+        <button class="percentage misc" id="%">%</button>
+        <button class="seven numbers" id="7">7</button>
+        <button class="eight numbers" id="8">8</button>
+        <button class="nine numbers" id="9">9</button>
+        <button class="divide operators" id="/">÷</button>
+        <button class="four numbers" id="4">4</button>
+        <button class="five numbers" id="5">5</button>
+        <button class="six numbers" id="6">6</button>
+        <button class="multiply operators" id="*">*</button>
+        <button class="one numbers" id="1">1</button>
+        <button class="two numbers" id="2">2</button>
+        <button class="three numbers" id="3">3</button>
+        <button class="substract operators" id="-">-</button>
+        <button class="zero numbers" id="0">0</button>
+        <button class="comma" id=".">.</button>
+        <button class="equals operators" id="=">=</button>
+        <button class="add operators" id="+">+</button>
     </div> 
 </div>
 
